# FlipBooQ

./: CMakeLists.txt  README.md  main.cpp
ui/: mainwindow.cpp  mainwindow.h
